CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

enable_testing ()

#if(JSON_SPIRIT_SUPPORT)
#    ADD_SUBDIRECTORY ("json_spirit")
#
#    INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/json_spirit/json_spirit"
#            DESTINATION "${AGRADE_INSTALL_DEPS}/json_spirit"
#        FILES_MATCHING PATTERN "*.h")
#endif(JSON_SPIRIT_SUPPORT)

